force-app/main/default/objects/Banker__c/Banker__c.object-meta.xml
<CustomObject>
    <description>holds the banker details</description>
    <label>Banker</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Banker Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bankers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>