force-app/main/default/objects/Banker__c/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <label>Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>Dynamics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>