force-app/main/default/objects/Banker__c/fields/Baker_Id__c.field-meta.xml
<CustomField>
    <fullName>Baker_Id__c</fullName>
    <description>banker identification number</description>
    <externalId>true</externalId>
    <label>Baker Id</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>