force-app/main/default/objects/Banker__c/fields/Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Branch_Code__c</fullName>
    <description>Branch code</description>
    <inlineHelpText>branch code</inlineHelpText>
    <label>Branch Code</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>