force-app/main/default/objects/Banker__c/fields/capacity__c.field-meta.xml
<CustomField>
    <fullName>capacity__c</fullName>
    <defaultValue>5</defaultValue>
    <label>capacity</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>