force-app/main/default/objects/Banker__c/fields/Deals_With__c.field-meta.xml
<CustomField>
    <fullName>Deals_With__c</fullName>
    <label>Deals With</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fin Products</fullName>
            </value>
            <value>
                <fullName>Service Goods</fullName>
            </value>
            <value>
                <fullName>Electronic Management</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>