force-app/main/default/objects/Banker__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>banker email</description>
    <externalId>true</externalId>
    <inlineHelpText>banker email</inlineHelpText>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>