force-app/main/default/objects/Banker__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>phone number</description>
    <inlineHelpText>phone number</inlineHelpText>
    <label>Phone Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>