force-app/main/default/objects/Banker__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Banker Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bankers</relationshipName>
    <type>Lookup</type>
</CustomField>