force-app/main/default/objects/Banker__c/validationRules/Banker_Name_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Banker_Name_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(User__c   =  null,  ISPICKVAL(Application_Type__c  , &apos;CRM&apos;) )</errorConditionFormula>
    <errorMessage>Banker Name is required when Application type is CRM.</errorMessage>
</ValidationRule>