force-app/main/default/objects/Banker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>User__c</columns>
    <columns>Baker_Id__c</columns>
    <columns>Application_Type__c</columns>
    <columns>capacity__c</columns>
    <columns>Deals_With__c</columns>
    <columns>Branch_Code__c</columns>
    <columns>Email__c</columns>
    <columns>Phone_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>